# cpp-3D-engine

./: CMakeLists.txt
assets/shaders/: debugShader.glsl  defaultShader.glsl  lightShader.glsl
include/GLAD/: glad.c  glad.h
src/debug/: DebugCube.cpp  DebugCube.h  DebugPrism.cpp  DebugPrism.h  Triangle2D.cpp  Triangle2D.h
src/engine/: Camera.cpp  Camera.h  Component.cpp  Component.h  GameObject.cpp  GameObject.h  Window.cpp  Window.h
src/main/: Main.cpp
src/renderer/: IndexBuffer.cpp  IndexBuffer.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  stb.cpp
src/scenes/: EditorScene.cpp  EditorScene.h  Scene.cpp  Scene.h
src/util/: LightCube.cpp  LightCube.h  Settings.h
